--- a/constants.gradle
+++ b/constants.gradle
@@ -1,5 +1,5 @@
 project.ext {
-    APPLICATION_ID = "org.edx.mobile"
+    APPLICATION_ID = "org.edx.mobile.debug"
     KOTLIN_VERSION = "1.3.41"
     GRADLE_PLUGIN_VERSION = "3.3.2"
     BUILD_TOOLS_VERSION = "28.0.3"
