Fix Chromecast initialization issue - LEARNER-8029 - LEARNER-8263 - Fix WebClient issue related to course enrollment - Handle casting option for Youtube videos

--- a/OpenEdXMobile/build.gradle
+++ b/OpenEdXMobile/build.gradle
@@ -564,6 +564,12 @@ android.applicationVariants.all { variant ->
         }
     }
 
+    def mandatoryFileTask = "verify$variantName" + "MandatoryFiles"
+    project.task(mandatoryFileTask).doFirst {
+        AndroidHelper.checkRequiredFileExistence(project)
+    }
+    generateTask.dependsOn(mandatoryFileTask)
+
     tasks.all { task ->
         if (task.name.startsWith("test")) {
             task.mustRunAfter(configureTask)
