--- a/.travis.yml
+++ b/.travis.yml
@@ -44,15 +44,15 @@ before_script:
   - echo "TRAVIS_BRANCH=$TRAVIS_BRANCH, PR=$PR, BRANCH=$BRANCH, DESCRIBE=$DESCRIBE"
   - chmod +x gradlew
   # Begin spinning up an emulator in the background
-#  - make emulator
+  - make emulator
 
 script:
   - make quality
   - make test
   # Check if emulator has finished booting
-#  - android-wait-for-emulator
-#  - adb shell input keyevent 82 &
-#  - travis_wait 30 make e2e
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
+  - travis_wait 30 make e2e
   # Script to check linting issues.
   - ./gradlew lintProdDebug
 
@@ -79,10 +79,10 @@ before_install:
   # Reference: https://github.com/wolkenschieber/License/blob/master/.travis.yml#L35
   - cp ./android-sdk-licenses/* "$ANDROID_HOME/licenses/"
   - pip install --user pillow # For screenshot tests
-  - python --version
-  - sudo apt-get install python3-pip python3-setuptools
-  - python --version
-  - pip3 install --user codecov
+#  - python --version
+#  - sudo apt-get install python3-pip python3-setuptools
+#  - python --version
+#  - pip3 install --user codecov
 
 after_success:
   - codecov
