intall pillow on python3

--- a/.travis.yml
+++ b/.travis.yml
@@ -78,9 +78,9 @@ before_install:
   # To fix it, we are copying the licenses that come with the SDK to Travis's directory.
   # Reference: https://github.com/wolkenschieber/License/blob/master/.travis.yml#L35
   - cp ./android-sdk-licenses/* "$ANDROID_HOME/licenses/"
-  - pip install --user pillow # For screenshot tests
 #  - python --version
-#  - sudo apt-get install python3-pip python3-setuptools
+  - sudo apt-get install python3-pip python3-setuptools
+  - pip3 install --user pillow # For screenshot tests
 #  - python --version
 #  - pip3 install --user codecov
 
