--- a/.travis.yml
+++ b/.travis.yml
@@ -79,6 +79,7 @@ before_install:
   # Reference: https://github.com/wolkenschieber/License/blob/master/.travis.yml#L35
   - cp ./android-sdk-licenses/* "$ANDROID_HOME/licenses/"
 #  - python --version
+  - sudo apt-get install python3
   - sudo apt-get install python3-pip python3-setuptools
   - pip3 install --user pillow # For screenshot tests
 #  - python --version
