--- a/.travis.yml
+++ b/.travis.yml
@@ -80,7 +80,7 @@ before_install:
   - cp ./android-sdk-licenses/* "$ANDROID_HOME/licenses/"
 #  - python --version
   - sudo apt install python3.6
-  - sudo apt install python3-pip
+  - sudo apt install python3-pip python3-setuptools
   - python --version
   - pip3 install --user pillow # For screenshot tests
 #  - pip3 install --user codecov
