--- a/.travis.yml
+++ b/.travis.yml
@@ -71,6 +71,11 @@ cache:
   directories:
     - $HOME/.gradle
 
+addons:
+  apt:
+    packages:
+      - python3.7
+
 before_install:
   - python --version
   - mkdir "$ANDROID_HOME/licenses" || true
@@ -80,9 +85,9 @@ before_install:
   - cp ./android-sdk-licenses/* "$ANDROID_HOME/licenses/"
 #  - python --version
   - sudo apt-get update
-  - sudo apt install python3
   - python --version
-  - sudo apt-get install python3-pip python3-setuptools
+  - sudo apt-get install python3.7 python3-pip python3-setuptools
+  - pip3 install --upgrade pip
   - python --version
   - pip3 install --user pillow # For screenshot tests
 #  - pip3 install --user codecov
