--- a/.travis.yml
+++ b/.travis.yml
@@ -83,8 +83,12 @@ before_install:
   # To fix it, we are copying the licenses that come with the SDK to Travis's directory.
   # Reference: https://github.com/wolkenschieber/License/blob/master/.travis.yml#L35
   - cp ./android-sdk-licenses/* "$ANDROID_HOME/licenses/"
+  - python -m pip --version
   - sudo apt-get update
+  - sudo apt-get upgrade
   - sudo -H pip install --upgrade pip
+  - sudo python -m pip install pip --upgrade --force
+  - python -m pip --version
   #  - python --version
   #  - sudo apt-get install python3.7 python3-pip python3-setuptools
   #  - pip3 install --upgrade pip
