--- a/.travis.yml
+++ b/.travis.yml
@@ -93,8 +93,8 @@ install:
   - python3 --version
   - pip3 --version
   #  - python --version
-  #  - sudo apt-get install python3.7 python3-pip python3-setuptools
   #  - pip3 install --upgrade pip
+  - sudo apt-get install python3.7 python3-pip python3-setuptools
   - pip install --upgrade --user pip
   - pip3 install --upgrade --user pip3
   - python --version
