--- a/.travis.yml
+++ b/.travis.yml
@@ -93,7 +93,7 @@ install:
   - python3 --version
   #  - python --version
   #  - pip3 install --upgrade pip
-  - sudo apt-get install python3.7 python3-pip python3-setuptools
+  - sudo apt-get install python3-pip python3-setuptools
   - pip install --upgrade --user pip
   - pip3 install --upgrade --user pip3
   - python --version
