Install pillow from gz file

--- a/.travis.yml
+++ b/.travis.yml
@@ -91,6 +91,9 @@ install:
   - python --version
   - pip --version
   - python3 --version
+  - pip install "https://files.pythonhosted.org/packages/b3/d0/a20d8440b71adfbf133452d4f6e0fe80de2df7c2578c9b498fb812083383/Pillow-6.2.2.tar.gz#sha256=db9ff0c251ed066d367f53b64827cc9e18ccea001b986d08c265e53625dab950" -v
+  - pip install "https://files.pythonhosted.org/packages/b3/d0/a20d8440b71adfbf133452d4f6e0fe80de2df7c2578c9b498fb812083383/Pillow-6.2.2.tar.gz#sha256=db9ff0c251ed066d367f53b64827cc9e18ccea001b986d08c265e53625dab950" -v
+
   - pip install https://github.com/python-pillow/Pillow/releases/tag/6.2.2
   - sudo apt-get update
   - sudo apt install python3-pip
