--- a/.travis.yml
+++ b/.travis.yml
@@ -92,7 +92,7 @@ install:
   - pip --version
   - python3 --version
   - curl https://bootstrap.pypa.io/pip/2.7/get-pip.py -o get-pip.py
-  - python get-pip.py pip<20.3.4 --user
+  - python get-pip.py pip==20.3.4 --user
   - which get-pip.py
   - pip install --trusted-host files.pythonhosted.org "https://files.pythonhosted.org/packages/b3/d0/a20d8440b71adfbf133452d4f6e0fe80de2df7c2578c9b498fb812083383/Pillow-6.2.2.tar.gz#sha256=db9ff0c251ed066d367f53b64827cc9e18ccea001b986d08c265e53625dab950" -v
   - pip install https://github.com/python-pillow/Pillow/releases/tag/6.2.2
