--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: generic
+language: android
 jdk: oraclejdk8
 sudo: required
 # Use trusty distribution to resolve the adb(requires at least GLIBC_2.16 version) execution failure
