--- a/.travis.yml
+++ b/.travis.yml
@@ -93,7 +93,7 @@ install:
   - pip --version
   - pip3 --version
   #  - make requirements
-  - pip3 install --user Pillow -v
+  - pip3 install --user Pillow==3.0.0 -v
 #  - pip install --user Pillow -v
 
 after_success:
