--- a/.travis.yml
+++ b/.travis.yml
@@ -85,17 +85,17 @@ before_install:
 install:
   - python --version
   - pip --version
-  - python3 --version
-  #  - sudo pip uninstall pip -y
-  - sudo apt install python3-pip
-  #  - pip3 install --upgrade pip
-  - python --version
-  - pip --version
-  - pip3 --version
-  - python -m pip --version
+#  - python3 --version
+#  #  - sudo pip uninstall pip -y
+#  - sudo apt install python3-pip
+#  #  - pip3 install --upgrade pip
+#  - python --version
+#  - pip --version
+#  - pip3 --version
+#  - python -m pip --version
   #  - make requirements
-  - pip3 install --user Pillow==3.0.0 -v
-  - python3 -m pip install --user Pillow --pre -v
+  - python -m pip install Tools/Pillow-6.2.2-cp27-cp27mu-manylinux1_x86_64.whl --user -v # library for image manipulation in snapshot tests
+  - python -m pip install Tools/codecov-2.1.11-py2.py3-none-any.whl --user -v # library for image manipulation in snapshot tests
 
 after_success:
   - codecov
