test: fix travis build issues (Python 2.7 is deprecated)
- Python 2.7 is deprecated. Travis-ci Linux image unable to install
  the Python2.7 dependencies (Codecov, Pillow).

- Update code to Python3 to use Codecov.

- Install Pillow v6.2.2 from the local storage, cuz Facebook screenshot
  tests uses Pillow library with Pyhton2.7 & unable to install from URL.
  Ref: https://github.com/facebook/screenshot-tests-for-android#requirements
  Solution Inspiration: https://github.com/Leanplum/Leanplum-Android-SDK/pull/452/files#diff-6ac3f79fc25d95cd1e3d51da53a4b21b939437392578a35ae8cd6d5366ca5485R27

- Use the default Travis-ci os image distribution.

Fixes: LEARNER-8387

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
 language: android
 jdk: oraclejdk8
 sudo: required
-# Use trusty distribution to resolve the adb(requires at least GLIBC_2.16 version) execution failure
-# Reference: https://github.com/atom/atom/issues/14440#issuecomment-302158430
-# Reference: https://docs.travis-ci.com/user/reference/trusty/
-dist: trusty # For 7.5GB of memory since the emulator requires a big chunk.
 env:
   matrix:
     - ANDROID_TARGET=android-27
@@ -77,8 +73,16 @@ before_install:
   # To fix it, we are copying the licenses that come with the SDK to Travis's directory.
   # Reference: https://github.com/wolkenschieber/License/blob/master/.travis.yml#L35
   - cp ./android-sdk-licenses/* "$ANDROID_HOME/licenses/"
-  - pip install --user codecov
-  - pip install --user pillow # For screenshot tests
+
+  # Python 2.7 is deprecated and no more maintained.
+  # Install the pip3 for python and install codecov
+  - sudo apt-get install python3-pip python3-setuptools
+  - pip3 install --user codecov
+
+  # Pillow Library for image manipulation in snapshot tests, install from local file cuz Python 2.7 is
+  # deprecated and no more maintained.
+  # Ref: https://github.com/facebook/screenshot-tests-for-android#requirements
+  - python -m pip install tools/Pillow-6.2.2-cp27-cp27mu-manylinux1_x86_64.whl --user
 
 after_success:
   - codecov
