--- a/OpenEdXMobile/build.gradle
+++ b/OpenEdXMobile/build.gradle
@@ -232,6 +232,9 @@ dependencies {
     // Material components like Chips and TabLayoutMediator
     implementation 'com.google.android.material:material:1.3.0-alpha01'
 
+    // Braze SDK Integration
+    implementation "com.appboy:android-sdk-ui:13.1.2"
+
     // test project configuration
     testImplementation 'junit:junit:4.12'
     testImplementation 'androidx.test.ext:junit-ktx:1.1.1'
