feat: add self-paced course dates events in calendar. - Add CTA (switch) with "add to calendar" message on the Course Dates page. - Show/Hide the message and CTA in the exist of Remote flags. - Ask user access read/write permission for calendar to perform CRUD operations. - Added course dates as events to the local mobile app calendar for every course separately. - Added analytics of the desired events fix: LEARNER-8320, LEARNER-8381

--- a/OpenEdXMobile/AndroidManifest.xml
+++ b/OpenEdXMobile/AndroidManifest.xml
@@ -24,6 +24,8 @@
 
     <!-- Sticky broadcast passing a message from one screen and display on another -->
     <uses-permission android:name="android.permission.BROADCAST_STICKY" />
+    <uses-permission android:name="android.permission.READ_CALENDAR" />
+    <uses-permission android:name="android.permission.WRITE_CALENDAR" />
 
     <!-- Setup for Code Coverage -->
     <instrumentation
