feat: Braze push notification integration
- Removed the standalone integration in favor of segment.io
- Integrated Push Notification. For Braze Push Notifications,
  if the app is in background or foreground we will see a notification
  and not a popup module
- Simple In-app messages are also enabled without any deep links
fix: LEARNER-8431

--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ allprojects {
         maven { url 'https://maven.google.com' }
         maven { url 'https://jitpack.io' }
         maven { url "https://appboy.github.io/appboy-android-sdk/sdk" }
+        maven { url "https://appboy.github.io/appboy-segment-android/sdk" }
     }
     project.apply from: "${rootDir}/constants.gradle"
 }
