--- a/OpenEdXMobile/build.gradle
+++ b/OpenEdXMobile/build.gradle
@@ -224,7 +224,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0-alpha01'
 
     // Braze SDK Integration
-    implementation "com.appboy:android-sdk-ui:13.1.2"
+    implementation 'com.appboy:appboy-segment-integration:7.0.0'
 
     // test project configuration
     testImplementation 'junit:junit:4.12'
