--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ script:
   # Check if emulator has finished booting
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
-  - travis_wait 30 make e2e
+  - make e2e
   # Script to check linting issues.
   - ./gradlew lintProdDebug
 
