feat: Open unit block in new tab option
- On clicking 'Open in Browser' banner the user will
  be redirected to the Unit block screen. The previous
  implementation was to open the browser with component's
  web url.
fix: LEANRER-8497

--- a/OpenEdXMobile/AndroidManifest.xml
+++ b/OpenEdXMobile/AndroidManifest.xml
@@ -282,6 +282,10 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name="org.edx.mobile.view.AuthenticatedWebViewActivity"
+            android:theme="@style/AppTheme.NoActionBar.TranslucentStatusBar" />
+
         <receiver android:name="org.edx.mobile.module.download.DownloadCompleteReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.DOWNLOAD_COMPLETE" />
